--- a/package.json
+++ b/package.json
@@ -47,14 +47,22 @@
     "@angular/router": "^21.0.0",
     "cytoscape": "^3.30.0",
     "cytoscape-dagre": "^2.5.0",
+    "jspdf": "^4.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
+    "@angular-devkit/architect": "^0.2100.0",
     "@angular-devkit/build-angular": "^21.0.0",
+    "@angular-devkit/core": "^21.0.0",
     "@angular/cli": "^21.0.5",
     "@angular/compiler-cli": "^21.0.0",
+    "@compodoc/compodoc": "^1.1.32",
+    "@storybook/addon-a11y": "^10.1.11",
+    "@storybook/addon-docs": "^10.1.11",
+    "@storybook/addon-onboarding": "^10.1.11",
+    "@storybook/angular": "^10.1.11",
     "@types/cytoscape": "^3.21.0",
     "@types/jasmine": "^5.1.13",
     "jasmine-core": "~5.1.0",
@@ -64,14 +72,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "ng-packagr": "^21.0.0",
-    "typescript": "~5.9.0",
     "storybook": "^10.1.11",
-    "@storybook/angular": "^10.1.11",
-    "@storybook/addon-a11y": "^10.1.11",
-    "@storybook/addon-docs": "^10.1.11",
-    "@storybook/addon-onboarding": "^10.1.11",
-    "@angular-devkit/architect": "^0.2100.0",
-    "@angular-devkit/core": "^21.0.0",
-    "@compodoc/compodoc": "^1.1.32"
+    "typescript": "~5.9.0"
   }
 }
