--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@angular/router": "^21.0.0",
     "cytoscape": "^3.30.0",
     "cytoscape-dagre": "^2.5.0",
+    "cytoscape-svg": "^0.4.0",
     "jspdf": "^4.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
